# securesnitch

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  io.github.diegoakanotoperator.securesnitch.yaml  securesnitch-daemon.service  securesnitch-ui.desktop
.github/: FUNDING.yml
.github/workflows/: pipeline.yml
daemon/: Cargo.toml  build.rs
daemon/src/: backend.rs  backend_test.rs  dns.rs  dns_proxy.rs  ebpf.rs  ebpf_test.rs  firewall.rs  hashing.rs  hashing_test.rs  ipc.rs  litebox.rs  litebox_test.rs  main.rs  nfq.rs  privileges.rs  process.rs  procfs.rs  rules_engine.rs  service.rs
daemon/tests/: integration.rs
docs/: audit_ebpf.md  audit_network.md  blue_team_audit.md  boot_security.md  red_team_audit.md  risk_command_execution.md  rust_refactoring_plan.md  security_analysis_report.md  security_master_checklist.md  testing_and_pentest_report.md  vulnerability_pentest.md  vulnerability_sql_injection.md
ebpf_prog/: Makefile  opensnitch-procs.c  self_defense.c
ui/: Cargo.toml  build.rs
ui/opensnitch/: service.py
ui/opensnitch/actions/: __init__.py
ui/opensnitch/customwidgets/: firewalltableview.py  generictableview.py
ui/opensnitch/dialogs/events/: dialog.py  menu_actions.py  nodes.py  queries.py  views.py
ui/opensnitch/res/: ruleseditor.ui  stats.ui
ui/src/: dashboard.rs  database.rs  dialog.rs  ipc.rs  main.rs  sysbar.rs  tests.rs
