[package]
name = "daemon"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aya = { version = "0.13.1", features = ["async_tokio"] }
caps = "0.5.6"
ipnet = "2.12.0"
iptables = "0.6.0"
log = "0.4.29"
nfq = "0.2.5"
procfs = "0.18.0"
prost = "0.13.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
sha2 = "0.10.9"
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
trust-dns-proto = "0.23.2"

[build-dependencies]
prost-build = "0.14.3"
tonic_build = { version = "0.12.3", package = "tonic-build", features = ["transport"] }

[dev-dependencies]
tempfile = "3.26.0"
