[package]
name = "daemon"
version = "1.0.1"
authors = ["diegoakanotoperator"]
edition = "2024"

[package.metadata.deb]
name = "securesnitch"
maintainer = "Diego <diego@localhost>"
copyright = "2026, Diego"
license-file = ["../LICENSE", "4"]
depends = "$auto, iptables"
section = "net"
priority = "optional"
assets = [
    ["target/release/daemon", "/usr/bin/securesnitch-daemon", "755"],
    ["../securesnitch-daemon.service", "/lib/systemd/system/securesnitch-daemon.service", "644"],
]

[package.metadata.rpm]
package = "securesnitch"

[package.metadata.rpm.files]
"/usr/bin/securesnitch-daemon" = { mode = "755", source = "target/release/daemon" }
"/lib/systemd/system/securesnitch-daemon.service" = { mode = "644", source = "../securesnitch-daemon.service" }

[dependencies]
anyhow = "1.0.102"
ipnet = "2.12.0"
log = "0.4.29"
prost = "0.13.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
sha2 = "0.10.9"
sysinfo = "0.30.13"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
trust-dns-proto = "0.23.2"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13.1", features = ["async_tokio"] }
caps = "0.5.6"
iptables = "0.6.0"
nfq = "0.2.5"

[build-dependencies]
prost-build = "0.14.3"
tonic_build = { version = "0.12.3", package = "tonic-build", features = ["transport"] }

[dev-dependencies]
tempfile = "3.26.0"
